--- a/index.html
+++ b/index.html
@@ -564,6 +564,9 @@
     </div>
   </div>
 
+  <!-- Supabase Client Library -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  
   <script src="game.js"></script>
 </body>
 </html>
