--- a/index.html
+++ b/index.html
@@ -438,6 +438,8 @@
           <div class="stat-value" id="totalCoinsHome" style="color: #ffdd00;">0</div>
         </div>
       </div>
+      
+      <h3 style="position: absolute; bottom: 20px; left: 20px; color: #888; font-size: 16px; margin: 0;">Made by Shivank Mishra</h3>
     </div>
   </div>
   
