--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
   <div id="homeScreen" class="overlay">
     <div class="dialog">
       <h1>⚠️ CODE RED ⚠️</h1>
-      <p style="color: #00d9ff; margin-bottom: 5px;">v.1.0.66</p>
+      <p style="color: #00d9ff; margin-bottom: 5px;">v1.0.68</p>
       <h2>SURVIVAL</h2>
       <p style="color: #00d9ff; font-size: 16px;">Backrooms Edition</p>
       
