--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
       <div class="stats-display">
         <div class="stat-item">
           <div class="stat-label">Best Wave</div>
-          <div class="stat-value" id="bestWaveHome">0</div>
+          <div class="stat-value" id="bestWaveHome">ZS0</div>
         </div>
         <div class="stat-item">
           <div class="stat-label">Total Coins</div>
@@ -790,7 +790,7 @@
   <div id="promoScreen" class="overlay" style="display: none;">
     <div class="dialog" style="max-width: 600px; max-height: 90vh; overflow-y: auto;">
       <h2>🎫 Redeem Promo Code</h2>
-      <p style="color: #aaa;">Enter your promo code to claim rewards. Codes are reusable.</p>
+      <p style="color: #aaa;">Enter your promo code to claim rewards. Codes are one-time use.</p>
       <div style="display:flex;gap:10px;margin-top:12px;">
         <input id="promoInput" type="text" placeholder="Enter code" style="flex:1;padding:10px;font-size:16px;" />
         <button id="promoRedeemBtn" style="padding:10px 16px;">Redeem</button>
